# attestation-service

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  pccs-localhost.crt
deploy/: apply.sh  crd-attestation-policy.yaml  deployment.yaml  rbac.yaml  service.yaml  tcb-ref.configmap.yaml
proto/v1/: attestation.proto
src/: config.rs  error.rs  lib.rs  main.rs  policy.rs  policy_action_store.rs  policy_sync.rs  quote.rs  quote_backend.rs  refstore.rs  service.rs  token.rs  verification_cache.rs  verifier.rs
tests/: grpc_end_to_end.rs
