[package]
name = "attestation-service"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Rust verifier service for TrustFnCall container attestation"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.50", features = ["derive"] }
hex = "0.4.3"
libc = "0.2.172"
prost = "0.13.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tonic = { version = "0.12.3", features = ["transport"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
tempfile = "3.23.0"
